; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/gen/extr_syslog.c_setlogmask.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/gen/extr_syslog.c_setlogmask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LogMask = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @setlogmask(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = call i32 (...) @THREAD_LOCK()
  %5 = load i32, i32* @LogMask, align 4
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %2, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i32, i32* %2, align 4
  store i32 %9, i32* @LogMask, align 4
  br label %10

10:                                               ; preds = %8, %1
  %11 = call i32 (...) @THREAD_UNLOCK()
  %12 = load i32, i32* %3, align 4
  ret i32 %12
}

declare dso_local i32 @THREAD_LOCK(...) #1

declare dso_local i32 @THREAD_UNLOCK(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
